tests/baselines/reference/jsFileCompilationOptionalParameter.errors.txt
error TS5055: Cannot write file 'a.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
a.js(1,13): error TS8009: The '?' modifier can only be used in TypeScript files.


!!! error TS5055: Cannot write file 'a.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== a.js (1 errors) ====
    function F(p?) { }
                ~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.